[flake8]
exit-zero=true
statistics=true
format=pylint
show-pep8=true

[nosetests]
verbosity=1
debug=0
detailed-errors=1
with-xunit=1
with-xcoverage=1
xunit-file=test_output/output.xml
cover-package=citools
cover-erase=1
cover-html=1
cover-html-dir=coverage_output/
xcoverage-file=coverage_output/coverage.xml

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[upload_sphinx]
upload-dir = doc/build/html

[metadata]
name = cement
author = Data Folk Labs, LLC
author_email = ['team@datafolklabs.com']
summary = CLI Application Framework for Python
description-file = README.md
license-file = LICENSE
home-page = http://builtoncement.org
classifiers = 
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2 :: Only

[files]
packages = 
    cement

[pbr]
warnerrors = True

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

